--- a/resume.css
+++ b/resume.css
@@ -1,3 +1,4 @@
+
 html, button, input, select, textarea{
  color: black;
 }
@@ -14,7 +15,52 @@ html {
 hr {
 	width: 100%;
 }
+ /* Tooltip container */
+.tooltip {
+    position: relative;
+    display: inline-block;
+    border-bottom: 1px dotted black; /* If you want dots under the hoverable text */
+}
 
+/* Tooltip text */
+.tooltip .tooltiptext {
+    visibility: hidden;
+    width: 350px;
+    background-color: #555;
+    color: #fff;
+    text-align: center;
+    padding: 5px 0;
+    border-radius: 6px;
+
+    /* Position the tooltip text */
+    position: absolute;
+    z-index: 1;
+    bottom: 125%;
+    left: 50%;
+    margin-left: -60px;
+
+    /* Fade in tooltip */
+    opacity: 0;
+    transition: opacity 0.3s;
+}
+
+/* Tooltip arrow */
+.tooltip .tooltiptext::after {
+    content: "";
+    position: absolute;
+    top: 70%;
+    left: 50%;
+    margin-left: -5px;
+    border-width: 5px;
+    border-style: solid;
+    border-color: #555 transparent transparent transparent;
+}
+
+/* Show the tooltip text when you mouse over the tooltip container */
+.tooltip:hover .tooltiptext {
+    visibility: visible;
+    opacity: 2;
+} 
 #wrapper{
 
 	padding: 40px 80px 40px 80px;
@@ -31,7 +77,10 @@ hr {
 #divimg {
   float: right;
 }
-
+.eval {
+  margin-left: 10px;
+  color: #ffd700;
+}
 #divimg img {
      width:190px; 
      background-color: rgba(0,0,0.2, 0.2);
